argocd/nginx/ingress.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: http
  namespace: kgateway-system
spec:
  gatewayClassName: kgateway
  listeners:
  - protocol: HTTP
    port: 8080
    name: http
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fastapi-get-href-10-websites-argocd
  namespace: default
spec:
  parentRefs:
    - name: http
      namespace: kgateway-system
  hostnames:
    - "www.chamo.local"
  rules:
    - backendRefs:
        - name: fastapi-app-get-href-from-10-websites
          port: 80
